# pathfinder_cpp

./: .gitmodules  CMakeLists.txt  README.md  eb_garamond_ttf.h  main.cpp  text-demo.cpp  text-demo.h
pathfinder/: CMakeLists.txt
pathfinder/include/: pathfinder.h
pathfinder/src/: aa-strategy.cpp  aa-strategy.h  atlas.cpp  atlas.h  buffer-texture.cpp  buffer-texture.h  context.cpp  context.h  gl-utils.cpp  gl-utils.h  meshes.cpp  meshes.h  pathfinder-impl.cpp  pathfinder-impl.h  pathfinder.cpp  platform.h  render-context.cpp  render-context.h  renderer.cpp  renderer.h  resources.cpp  resources.h  shader-loader.cpp  shader-loader.h  ssaa-strategy.cpp  ssaa-strategy.h  text-renderer.cpp  text-renderer.h  text.cpp  text.h  utils.h  xcaa-strategy.cpp  xcaa-strategy.cpp~RF107514d.TMP  xcaa-strategy.h
pathfinder/src/resources/: area_lut.h  eb_garamond_ttf.h  gamma_lut.h  partition_font.h
pathfinder/src/resources/shaders/: blit-gamma.fs.glsl  blit-linear.fs.glsl  direct-3d-curve.vs.glsl  direct-curve.fs.glsl  direct-curve.vs.glsl  direct-interior.fs.glsl  direct-interior.vs.glsl  mcaa.fs.glsl  mcaa.vs.glsl  stencil-aaa.fs.glsl  stencil-aaa.vs.glsl  xcaa-mono-resolve.fs.glsl  xcaa-mono-resolve.vs.glsl  xcaa-mono-subpixel-resolve.fs.glsl
pathfinder/src/resources/shaders/es2/: blit.vs.glsl  common.inc.glsl  conservative-interior.vs.glsl  direct-3d-interior.vs.glsl  ssaa-subpixel-resolve.fs.glsl  stencil-aaa.fs.glsl  stencil-aaa.vs.glsl  xcaa-mono-resolve.fs.glsl  xcaa-mono-subpixel-resolve.fs.glsl  xcaa-mono-subpixel-resolve.vs.glsl
pathfinder/src/resources/shaders/gl410/: blit-gamma.fs.glsl  blit-linear.fs.glsl  blit.vs.glsl  common.inc.glsl  conservative-interior.vs.glsl  direct-3d-curve.vs.glsl  direct-3d-interior.vs.glsl  direct-curve.fs.glsl  direct-curve.vs.glsl  direct-interior.fs.glsl  direct-interior.vs.glsl  mcaa.fs.glsl  mcaa.vs.glsl  ssaa-subpixel-resolve.fs.glsl  stencil-aaa.fs.glsl  stencil-aaa.vs.glsl  xcaa-mono-resolve.fs.glsl  xcaa-mono-resolve.vs.glsl  xcaa-mono-subpixel-resolve.fs.glsl  xcaa-mono-subpixel-resolve.vs.glsl
